--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -1,9 +1,12 @@
 \newcommand{\inv}{^{-1}}
 \newcommand{\opname}{\operatorname}
 \newcommand{\surjto}{\twoheadrightarrow}
-\newcommand{\injto}{\hookrightarrow}
+% \newcommand{\injto}{\hookrightarrow}
+\newcommand{\injto}{\rightarrowtail}
+\newcommand{\bijto}{\leftrightarrow}
 
 \newcommand{\liff}{\leftrightarrow}
+\newcommand{\notliff}{\mathrel{\ooalign{$\leftrightarrow$\cr\hidewidth$/$\hidewidth}}}
 \newcommand{\lthen}{\rightarrow}
 \let\varlnot\lnot
 \newcommand{\ordsim}{\mathord{\sim}}
@@ -113,6 +116,7 @@
 \newcommand{\Remar}{\textit{Remark. }}
 \newcommand{\Defin}[1]{\textbf{Definition} (#1).}
 \newcommand{\Claim}{\textbf{Claim. }}
+\newcommand{\Propo}{\textbf{Proposition. }}
 
 \newcommand{\lb}{\left(}
 \newcommand{\rb}{\right)}
