--- a/latex_template/macros.tex
+++ b/latex_template/macros.tex
@@ -109,6 +109,7 @@
 \newcommand{\cothx}{\coth x}          \newcommand{\arcothx}{\arcoth x}
 \newcommand{\lnx}{\ln x}
 \newcommand{\expx}{\exp x}
+\newcommand{\e}[1]{e^{#1}}
 
 \newcommand{\Theom}{\textbf{Theorem. }}
 \newcommand{\Lemma}{\textbf{Lemma. }}
@@ -143,6 +144,7 @@
 \newcommand{\WeSee}{\text{We see }}
 \newcommand{\So}{\text{So }}
 \newcommand{\Then}{\text{Then }}
+\newcommand{\Hence}{\text{Hence }}
 \newcommand{\Choose}{\text{Choose }}
 \newcommand{\Take}{\text{Take }}
 \newcommand{\false}{\text{False}}
