--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -2,6 +2,7 @@
 % PACKAGE IMPORTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[tmargin=2cm,rmargin=1in,lmargin=1in,margin=0.85in,bmargin=2cm,footskip=.2in]{geometry}
+\usepackage[none]{hyphenat}
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
 \allowdisplaybreaks
 \usepackage{undertilde}
